indico_themes_canonical/static/css/_default/registration.css
/* ---------- Style for registration menu ---------- */

/* Style for registration menu table */
.i-table-widget {
  border: none;
}

.i-table-widget th {
  background: none;
}

.i-table-widget tr > th {
  font-size: 0.765625rem;
  font-weight: 400;
  line-height: 1rem;
  text-transform: uppercase;
}

/* ---------- Style for registration form ---------- */

/* Remove/overide default styles */
.info-message-box {
  background: none;
  border: none;
  padding: 0;
}

.info-message-box .icon,
.action-box .icon {
  display: none;
}
.action-box .toolbar .i-button {
  font-weight: normal;
}

.page-content > .action-box.accept > .section > .text .label,
.page-content > .action-box.accept > .section > .toolbar .i-button {
  color: var(--brand-black);
  font-weight: 300;
}

#registration-summary .i-box-header .i-box-metadata span {
  color: var(--brand-black);
}

#registration-summary .i-box-header .i-box-metadata .label {
  font-weight: 400;
}

/* Style deadline info */
i.icon.icon-time {
  display: none;
}

.infogrid.condensed .infoline .label {
  font-size: 0.9rem;
  font-weight: 400;
  text-transform: uppercase;
  display: inline-block;
  position: absolute;
  margin-top: 2px;
}

.infogrid.condensed .infoline.date {
  margin-bottom: 1rem;
  font-size: 1rem;
}

.infogrid.condensed .infoline.date .text div:first-child .label {
  font-size: 1.306rem;
  font-weight: 300;
  position: static;
  margin-bottom: 1rem;
  text-transform: none;
}

.infogrid.condensed .infoline.date .text div:nth-child(2) .datetime {
  margin-left: 13rem;
}

.infogrid.condensed .infoline.date .datetime {
  color: var(--brand-black);
  font-size: 1rem;
}

.infogrid.condensed .infoline:not(.date) .text div:nth-child(2) {
  display: inline;
  margin-left: 13rem;
}

/* Style contact-us info icon */
i.icon.icon-phone {
  display: none;
}

.infogrid.condensed .infoline {
  width: 100%;
}

/* Date input */
.SingleDatePicker .SingleDatePickerInput__withBorder {
  border: none;
}

button.SingleDatePickerInput_calendarIcon {
  padding: 0;
}

/* Yes/No */

.events-registration-client-styles-___regform-module__boolean-field___0geJs .ui.button {
  background: var(--brand-off-white);
  color: var(--brand-black);
  font-size: 1rem;
  font-weight: 400;
}

.events-registration-client-styles-___regform-module__boolean-field___0geJs .ui.button.active {
  background: var(--brand-warm-grey);
  color: var(--brand-black);
  font-size: 1rem;
  font-weight: 400;
}

/* Dropdown */
.ui.search.selection.dropdown input[type]:not([type="checkbox"]):not([type="radio"]):not([type="checkbox"]):not([type="submit"]):focus {
  outline: none;
}

/* General styles for the form */
.regform-section {
  box-shadow: none;
}

.regform-section .i-box-header {
  background: var(--brand-white);
}

.regform-section .i-box-header .i-box-title {
  font-size: 1.3em;
  font-weight: 300;
}

.regform-section ul {
  padding-left: 1rem;
}

.ui.form .field > label {
  font-size: 1rem;
  font-weight: 400;
  margin-bottom: 0.75rem;
}

.ui.form input {
  font-weight: 300;
}

.ui.form .field .field {
  margin-bottom: 1rem;
}

/* ---------- Style for registration summary ---------- */

.regform-done {
  border: none;
  box-shadow: none;
}

.regform-done .i-box-header {
  background-color: var(--brand-white);
}

.regform-done .i-box-header .i-box-title {
  font-size: 1.3em;
  font-weight: 300;
}

.regform-done .regform-done-caption {
  width: 140px;
}

.regform-done .regform-done-caption,
.regform-done .regform-done-data {
  border: none;
  color: var(--brand-black);
  font-weight: 300;
  padding: 0.5rem 0.75rem 0.5rem 0;
  text-align: left;
}

.regform-done table.registration-info tr.regform-done-title td {
  font-size: 0.77rem;
  font-weight: 400;
  line-height: 1rem;
  padding: 0.75rem 0.5rem 0.75rem 0;
  text-transform: uppercase;
}

.regform-done table.registration-info tr.regform-done-title td {
  padding-top: 1.5rem;
}

.regform-done tr {
  border-bottom: 1px solid #e1e1e1;
}

/* ---------- Media queries ---------- */

@media screen and (max-width: 550px) {
  #registration-summary .i-box-header .i-box-metadata .label {
    clear: left;
    float: left;
    margin: 0;
  }

  #registration-summary .i-box-header .i-box-metadata .content {
    float: left;
    margin-left: 1rem;
  }
}

/* Style to improve the calendar picker */

/* Workaround for https://github.com/canonical/canonical-indico-customization-files/issues/29 */
.CalendarMonth_caption select.datepicker-select:first-child {
  padding-left: 3rem !important;
}

